--- a/username.html
+++ b/username.html
@@ -359,7 +359,7 @@ async function cargarLogo(username) {
 
     if (perfil.status === "ok") {
       const logo = document.getElementById("userLogo");
-      logo.src = perfil.logo || "https://i.ibb.co/default-logo.png"; // fallback si no hay logo
+      logo.src = perfil.logo || "https://i.ibb.co/p6Ycq6XC/Turnox-logo.png"; // fallback si no hay logo
     } else {
       console.log("No se encontró perfil para", username);
     }
