--- a/perfil.html
+++ b/perfil.html
@@ -14,57 +14,59 @@
 
 <h2>Subir Logo</h2>
 
-<img id="preview" src="" alt="Logo Actual">
-<input type="file" id="fileInput" accept="image/*">
-<button id="uploadBtn">Subir</button>
+
+<button id="uploadLogoBtn">Subir Logo</button>
+<input type="file" id="logoFile" style="display:none" accept="image/*">
+<img id="previewLogo" src="" alt="Logo" style="max-width:150px;margin-top:10px;">
+
 <p id="status"></p>
 
 <script>
-const API_URL = "https://script.google.com/macros/s/AKfycbxKoJjty1C5xlTUZj3PnNVTubQdvpLVjyzWFj3YdCOEj8tLjNaJbG32wt_mOz8hFsNckw/exec"; // reemplaza con tu URL de Apps Script
 
-// Obtener userId de la URL
-const params = new URLSearchParams(window.location.search);
-const userId = params.get("userId");
-if (!userId) alert("Falta userId en la URL");
 
-// Preview de la imagen
-const fileInput = document.getElementById("fileInput");
-const preview = document.getElementById("preview");
-fileInput.addEventListener("change", () => {
+const btn = document.getElementById("uploadLogoBtn");
+const fileInput = document.getElementById("logoFile");
+const preview = document.getElementById("previewLogo");
+
+btn.addEventListener("click", () => fileInput.click());
+
+fileInput.addEventListener("change", async () => {
   const file = fileInput.files[0];
-  if(file) preview.src = URL.createObjectURL(file);
-});
+  if (!file) return;
 
-// Subir imagen
-document.getElementById("uploadBtn").addEventListener("click", async () => {
-  const file = fileInput.files[0];
-  if (!file) return alert("Selecciona un archivo");
+  // Mostrar preview
+  preview.src = URL.createObjectURL(file);
 
+  // Convertir a base64
   const reader = new FileReader();
-  reader.onload = async function(e) {
-    const base64 = e.target.result.split(",")[1]; // eliminar el prefijo data:image/...
+  reader.readAsDataURL(file);
+  reader.onload = async () => {
+    let base64Data = reader.result.split(",")[1]; // quitar "data:image/png;base64,"
     
-    document.getElementById("status").innerText = "Subiendo...";
-    
-    const res = await fetch(API_URL, {
+    const userId = "5fdc6c98-c92d-4e6a-a5d2-0f67736a796c"; // tomarlo de sesión o URL
+    const fileName = file.name;
+
+    // Llamada POST a Apps Script
+    const res = await fetch("https://script.google.com/macros/s/AKfycbxKoJjty1C5xlTUZj3PnNVTubQdvpLVjyzWFj3YdCOEj8tLjNaJbG32wt_mOz8hFsNckw/exec", {
       method: "POST",
       body: new URLSearchParams({
         action: "uploadLogo",
         userId,
-        file: base64,
-        fileName: file.name
+        file: base64Data,
+        fileName
       })
     });
     const data = await res.json();
+
     if (data.status === "ok") {
-      preview.src = data.url;
-      document.getElementById("status").innerText = "Logo subido correctamente!";
+      alert("Logo subido con éxito!");
+      console.log("URL en Drive:", data.url);
     } else {
-      document.getElementById("status").innerText = "Error: " + data.msg;
+      alert("Error: " + data.msg);
     }
   };
-  reader.readAsDataURL(file);
 });
+
 </script>
 
 </body>
