--- a/perfil.html
+++ b/perfil.html
@@ -1,73 +1,132 @@
-<!DOCTYPE html>
+
+ 
+    <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Subir Logo</title>
-<style>
-  body { font-family: Arial; display: flex; flex-direction: column; align-items: center; padding: 20px; }
-  #preview { max-width: 200px; margin-bottom: 10px; }
-  button { padding: 8px 16px; cursor: pointer; }
-</style>
+  <meta charset="UTF-8">
+  <title>Subir Logo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+    }
+    .card {
+      max-width: 400px;
+      margin: 0 auto;
+      padding: 20px;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      text-align: center;
+    }
+    input[type="file"] {
+      margin: 15px 0;
+    }
+    button {
+      padding: 10px 20px;
+      border: none;
+      background: #28a745;
+      color: #fff;
+      font-size: 16px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button:disabled {
+      background: #999;
+    }
+    .preview {
+      margin-top: 15px;
+    }
+    .preview img {
+      max-width: 100%;
+      border-radius: 8px;
+    }
+  </style>
 </head>
 <body>
+  <div class="card">
+    <h2>Subir Logo</h2>
+    <input type="file" id="fileInput" accept="image/*">
+    <button id="uploadBtn" disabled>Subir Logo</button>
+    <div class="preview" id="preview"></div>
+    <p id="status"></p>
+  </div>
 
-<h2>Subir Logo</h2>
+  <script>
+    // ==================== TOMAR USERID DE URL ====================
+    const params = new URLSearchParams(window.location.search);
+    const userId = params.get("userId");
+    console.log("UserId detectado en URL:", userId);
 
-
-<button id="uploadLogoBtn">Subir Logo</button>
-<input type="file" id="logoFile" style="display:none" accept="image/*">
-<img id="previewLogo" src="" alt="Logo" style="max-width:150px;margin-top:10px;">
-
-<p id="status"></p>
-
-<script>
-
-
-const btn = document.getElementById("uploadLogoBtn");
-const fileInput = document.getElementById("logoFile");
-const preview = document.getElementById("previewLogo");
-
-btn.addEventListener("click", () => fileInput.click());
-
-fileInput.addEventListener("change", async () => {
-  const file = fileInput.files[0];
-  if (!file) return;
-
-  // Mostrar preview
-  preview.src = URL.createObjectURL(file);
-
-  // Convertir a base64
-  const reader = new FileReader();
-  reader.readAsDataURL(file);
-  reader.onload = async () => {
-    let base64Data = reader.result.split(",")[1]; // quitar "data:image/png;base64,"
-    
-    const userId = "5fdc6c98-c92d-4e6a-a5d2-0f67736a796c"; // tomarlo de sesión o URL
-    const fileName = file.name;
-
-    // Llamada POST a Apps Script
-    const res = await fetch("https://script.google.com/macros/s/AKfycbxKoJjty1C5xlTUZj3PnNVTubQdvpLVjyzWFj3YdCOEj8tLjNaJbG32wt_mOz8hFsNckw/exec", {
-      method: "POST",
-      body: new URLSearchParams({
-        action: "uploadLogo",
-        userId,
-        file: base64Data,
-        fileName
-      })
-    });
-    const data = await res.json();
-
-    if (data.status === "ok") {
-      alert("Logo subido con éxito!");
-      console.log("URL en Drive:", data.url);
-    } else {
-      alert("Error: " + data.msg);
+    if (!userId) {
+      document.getElementById("status").innerText = "❌ Falta userId en la URL";
     }
-  };
-});
 
-</script>
+    // ==================== EVENTOS ====================
+    const fileInput = document.getElementById("fileInput");
+    const uploadBtn = document.getElementById("uploadBtn");
+    const status = document.getElementById("status");
+    const preview = document.getElementById("preview");
 
+    let selectedFile = null;
+
+    fileInput.addEventListener("change", (e) => {
+      selectedFile = e.target.files[0];
+      if (selectedFile) {
+        uploadBtn.disabled = false;
+        preview.innerHTML = `<img src="${URL.createObjectURL(selectedFile)}">`;
+      } else {
+        uploadBtn.disabled = true;
+        preview.innerHTML = "";
+      }
+    });
+
+    // ==================== SUBIR A APPS SCRIPT ====================
+    uploadBtn.addEventListener("click", async () => {
+      if (!selectedFile || !userId) {
+        alert("Falta archivo o userId");
+        return;
+      }
+
+      status.innerText = "⏳ Subiendo...";
+
+      const reader = new FileReader();
+      reader.onloadend = async () => {
+        const base64File = reader.result.split(",")[1];
+
+        console.log("Enviando a Apps Script:", {
+          action: "uploadLogo",
+          userId,
+          fileName: selectedFile.name
+        });
+
+        try {
+          const res = await fetch("https://script.google.com/macros/s/AKfycbxKoJjty1C5xlTUZj3PnNVTubQdvpLVjyzWFj3YdCOEj8tLjNaJbG32wt_mOz8hFsNckw/exec", {
+            method: "POST",
+            body: new URLSearchParams({
+              action: "uploadLogo",
+              userId: userId,
+              file: base64File,
+              fileName: selectedFile.name
+            })
+          });
+
+          const data = await res.json();
+          console.log("Respuesta Apps Script:", data);
+
+          if (data.status === "ok") {
+            status.innerHTML = `✅ Logo subido: <a href="${data.url}" target="_blank">Ver Logo</a>`;
+          } else {
+            status.innerText = "❌ Error: " + data.msg;
+          }
+        } catch (err) {
+          console.error("Error en fetch:", err);
+          status.innerText = "❌ Error de conexión con Apps Script";
+        }
+      };
+
+      reader.readAsDataURL(selectedFile);
+    });
+  </script>
 </body>
 </html>
