--- a/username.html
+++ b/username.html
@@ -349,27 +349,35 @@ let selectedProfId = "";
 let selectedHora = "";
 
 // ------------------ CARGAR LOGO ------------------
-async function cargarLogo(username) {
+  async function cargarLogo(username) {
   try {
     // pedimos al backend los datos del perfil
     const res = await fetch(`${API_URL}?action=getPerfil&username=${username}`);
     const perfil = await res.json();
 
-    console.log("Perfil recibido del backend:", perfil); // <-- depuración
+    console.log("Perfil recibido del backend:", perfil);
 
     if (perfil.status === "ok") {
+      let logoUrl = perfil.logo || "https://i.ibb.co/p6Ycq6XC/Turnox-logo.png";
+
+      // Si es un link de Drive tipo "https://drive.google.com/file/d/ID/view?usp=..."
+      const driveMatch = logoUrl.match(/\/d\/([a-zA-Z0-9_-]+)\//);
+      if (driveMatch) {
+        const fileId = driveMatch[1];
+        // Transformamos en enlace directo compatible con <img>
+        logoUrl = `https://drive.google.com/uc?export=view&id=${fileId}`;
+      }
+
       const logo = document.getElementById("userLogo");
-      logo.src = perfil.logo || "https://i.ibb.co/p6Ycq6XC/Turnox-logo.png"; // fallback si no hay logo
+      logo.src = logoUrl;
     } else {
       console.log("No se encontró perfil para", username);
     }
-  } catch(e) {
+  } catch (e) {
     console.log("Error cargando logo:", e);
   }
 }
 
-// Llamada al cargar la página
-cargarLogo(username);
 
 // ------------------ RENDER CALENDARIO ------------------
 function renderCalendario(year, month) {
