--- a/username.html
+++ b/username.html
@@ -290,7 +290,7 @@
     position: fixed;
     top: 20px;       /* Ajusta la distancia desde arriba */
     right: -200px;    /* Inicial fuera de pantalla a la derecha */
-    width: 120px;     /* Tamaño del logo */
+    width: 250px;     /* Tamaño del logo */
     transition: right 0.8s ease; /* Animación al aparecer */
     z-index: 9999;    /* Siempre por encima */
     pointer-events: none; /* No interfiere con clicks */
@@ -307,8 +307,8 @@
  
   <!-- Logo del usuario -->
 <div id="floatingLogo">
-  <div class="logo-container" style="largin-left:0px; margin-bottom:20px;">
-  <img id="userLogo" src="" alt="Logo" style="max-width:150px; display:block; margin:0 auto 10px;"></div>
+  <div class="logo-container">
+  <img id="userLogo"></div>
 </div>
 
   
