--- a/username.html
+++ b/username.html
@@ -289,9 +289,9 @@
   #floatingLogo {
     position: fixed;
     top: 20px;       /* Ajusta la distancia desde arriba */
-    right: -200px;    /* Inicial fuera de pantalla a la derecha */
-    width: 250px;     /* Tamaño del logo */
-    transition: right 0.8s ease; /* Animación al aparecer */
+    left: -200px;    /* Inicial fuera de pantalla a la derecha */
+    width: 200px;     /* Tamaño del logo */
+    transition: left 0.8s ease; /* Animación al aparecer */
     z-index: 9999;    /* Siempre por encima */
     pointer-events: none; /* No interfiere con clicks */
   }
