--- a/username.html
+++ b/username.html
@@ -288,12 +288,12 @@
 /* Contenedor flotante */
   #floatingLogo {
     position: fixed;
-    top: 20px;       /* Ajusta la distancia desde arriba */
-    left: -200px;    /* Inicial fuera de pantalla a la derecha */
-    width: 200px;     /* Tamaño del logo */
-    transition: left 0.8s ease; /* Animación al aparecer */
-    z-index: 9999;    /* Siempre por encima */
-    pointer-events: none; /* No interfiere con clicks */
+    top: 20px;             /* distancia desde arriba */
+    right: -150px;          /* empieza fuera de pantalla */
+    width: 180px;           /* tamaño del logo */
+    transition: right 0.8s ease; 
+    z-index: 9999;
+    pointer-events: none;
   }
 
   #floatingLogo img {
@@ -658,10 +658,10 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 </script>
 <script>
-  // Esperar 4 segundos antes de mostrar el logo
+  // Aparece 4 segundos después
   setTimeout(() => {
-    const logo = document.getElementById('floatingLogo');
-    logo.style.right = '0px'; // Lo mueve hacia la pantalla
+    const logo = document.getElementById("floatingLogo");
+    logo.style.right = "0px";  // se mueve hasta el borde derecho
   }, 4000);
 </script>
 </body>
