--- a/username.html
+++ b/username.html
@@ -51,6 +51,7 @@
 
   /* Calendario */
   #calendario {
+    margin-top: 200px auto;
     margin: 20px auto;
     max-width: 600px;
     background: 
