--- a/username.html
+++ b/username.html
@@ -319,7 +319,13 @@
 
   
 
-  <div id="calendario"></div>
+  <div id="calendario">
+<div id="floatingLogo">
+  <div class="logo-container">
+  <img id="userLogo"></div>
+</div>
+    
+  </div>
 <div style="display:flex; gap:20px; align-items:center; justify-content:center;">
   <!-- Botón Mes anterior -->
   <button id="prevMonth" style="display:flex; align-items:center; gap:6px; padding:0; background:none; border:none; color:#F4EDFF; cursor:pointer; font-size:16px;">
