--- a/username.html
+++ b/username.html
@@ -303,28 +303,48 @@
        pointer-events: none; 
                    } 
      #floatingLogo img { width: 100%; display: block; }
+header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 20px;
+      background-color: #f8f9fa;
+      border-bottom: 1px solid #ddd;
+    }
+     /* Botón Login */
+    .login-btn {
+      padding: 8px 16px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      font-size: 14px;
+      cursor: pointer;
+      text-decoration: none;
+      transition: background 0.3s ease;
+    }
 
+    .login-btn:hover {
+      background-color: #0056b3;
+    }
 </style>
 
 </head>
 <body>
- 
+ <header>
   <!-- Logo del usuario -->
 <div id="floatingLogo">
   <div class="logo-container">
   <img id="userLogo"></div>
 </div>
-
-  
-<div id="floatingLogo">
-  <div class="logo-container">
-  <img id="userLogo"></div>
+   <!-- Botón Login -->
+    <a href="login.html" class="login-btn">Login</a>
+ </header>
   
 
-  <div id="calendario">
-</div>
-    
-  </div>
+  
+
+  <div id="calendario"></div>
 <div style="display:flex; gap:20px; align-items:center; justify-content:center;">
   <!-- Botón Mes anterior -->
   <button id="prevMonth" style="display:flex; align-items:center; gap:6px; padding:0; background:none; border:none; color:#F4EDFF; cursor:pointer; font-size:16px;">
