--- a/username.html
+++ b/username.html
@@ -51,8 +51,9 @@
 
   /* Calendario */
   #calendario {
-    margin-top: 200px auto;
-    margin: 70px auto;
+    margin-top: 100px auto;
+    margin-bottom: 10px;
+    
     max-width: 600px;
     background: 
         linear-gradient(
