--- a/username.html
+++ b/username.html
@@ -51,10 +51,9 @@
 
   /* Calendario */
   #calendario {
-    margin-top: 100px auto;
-    margin-bottom: 10px;
-    
-    max-width: 600px;
+   margin: 100px auto 10px auto; /* arriba - lados - abajo - lados */
+  max-width: 600px;             /* ancho máximo */
+  width: 100%;  
     background: 
         linear-gradient(
             135deg,
