--- a/username.html
+++ b/username.html
@@ -287,31 +287,28 @@
   background: #452a7a;
 }
 
-/* Contenedor flotante */ 
-     #floatingLogo { 
-       position: absolute;          /* o fixed si querés que quede flotante al scrollear */
-  top: 0;
-  left: -150px;                /* empieza fuera del header */
-  height: 100%;                /* ocupa todo el alto del header */
+#floatingLogo {
+  height: 100%;
   display: flex;
-  align-items: center;         /* centra verticalmente */
+  align-items: center;
   margin-left: 5px;
-  transition: left 0.8s ease;  /* hace la animación de izquierda a derecha */
-  z-index: 100;
-                   } 
-     #floatingLogo img { 
-       max-height: 60px;
-  max-width: 60vw;
+  max-width: 60%;            /* nunca supere el 60% del ancho del header */
+  transition: transform 0.8s ease;
+  transform: translateX(-150px); /* empieza fuera de pantalla */
+}
+
+#floatingLogo img {
+  max-height: 60px;
+  max-width: 100%;
   object-fit: contain;
-  display: block; 
-     }
+  display: block;
+}
 header {
       position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 70px;              /* altura fija del header */
-  
+  height: 70px;              
   border-bottom: 1px solid #ddd;
   display: flex;
   justify-content: space-between;
@@ -715,8 +712,8 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 </script>
 <script>
-  setTimeout(() => {
-  document.getElementById('floatingLogo').style.left = '5px'; // posición final dentro del header
+ setTimeout(() => {
+  document.getElementById('floatingLogo').style.transform = 'translateX(0)';
 }, 3000);
 </script>
 </body>
