--- a/register.html
+++ b/register.html
@@ -150,21 +150,21 @@
     }
     
 
-.btn2 {
-    display: block;
-    width: 250px;
-    padding: 15px 0;
-    margin: 10px auto;
-    font-size: 1rem;
-    font-weight: 600;
-    color: #533482;
-    background-color: #fff;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    text-decoration: none;
-    transition: background-color 0.3s, transform 0.2s;
-}
+btn2 {
+      width: 100%;
+      padding: 0.8rem;
+      background: white;
+      color: #533482;
+      border: none;
+      border-radius: 8px;
+      font-weight: 600;
+      cursor: pointer;
+      margin-top: 1rem;
+    }
+
+    btn2:hover {
+      background: #e5e5e5;
+    }
   </style>
 </head>
 <body>
@@ -186,7 +186,7 @@
     </form>
     <div id="msg"></div> 
   <script>
-    const API_URL = "https://script.google.com/macros/s/AKfycbz0XFsJDwnbjMlsgRVuD3xPTfpxpY4BHd229B0OwKTLIgzZ_mCcMYmJb744pXtAHRNQVw/exec";
+    const API_URL = "https://script.google.com/macros/s/AKfycbxhL-hEvY0j86gCCqysKg0HDSd8bmpBfIzC4F06D9NuQve23qbM5wKM59IWZpi-ciT2Kw/exec";
 // 🔹 Transformar el username en tiempo real
   document.getElementById("username").addEventListener("input", function(e) {
     this.value = this.value
