--- a/register.html
+++ b/register.html
@@ -150,7 +150,7 @@
     }
     
 
-btn2 {
+.btn2 {
       width: 100%;
       padding: 0.8rem;
       background: white;
@@ -162,7 +162,7 @@ btn2 {
       margin-top: 1rem;
     }
 
-    btn2:hover {
+    .btn2:hover {
       background: #e5e5e5;
     }
   </style>
