--- a/register.html
+++ b/register.html
@@ -166,7 +166,7 @@
       <input type="password" id="password" placeholder="Contraseña" required> 
       <input type="text" id="username" placeholder="nombreDeTuNegocio" required> 
       <span class="web">Tu "nombre de negocio" será "tu link" ej: www.turnox.pro/peluquitos o www.turnox.pro/hair-studio.</span>
-      <button type="submit">Registrarme</button> 
+      <button type="submit">Crear cuenta</button> 
       <button type="button" onclick="window.location.href='/login'">Ya tengo una cuenta</button>
       
       
